[package]
name = "poe-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["poe-api-derive", "poe-api-core"]

[dependencies]
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
async-graphql = "7.0.11"
async-graphql-axum = "7.0.11"
axum = { version = "0.7.7", features = ["headers"] }
poe-api-derive = { path = "poe-api-derive" }
regex = "1.11.0"
reqwest = { version = "0.12.8", features = ["json"] }
serde = "1.0.210"
serde_json = "1.0.128"
futures = "0.3.31"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
missing_errors_doc = { level = "allow", priority = 1 }
missing_panics_doc = { level = "allow", priority = 1 }
must_use_candidate = { level = "allow", priority = 1 }
nursery = "deny"
option_if_let_else = { level = "allow", priority = 1 }
unwrap_used = "deny"
